--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.5.2",
+        "jquery": "^3.5.1",
         "tiny-slider": "^2.9.3"
     }
 }
